BF on Letter generation for Claim served and ECC letters. Refactored existing code and added appropriate tests.